# pathfinder

c/: Cargo.toml
c/include/pathfinder/: pathfinder.h
c/src/: lib.rs
canvas/src/: lib.rs
examples/c_canvas_minimal/: Makefile  c_canvas_minimal.c
font-renderer/: Cargo.toml
font-renderer/src/: core_graphics.rs  directwrite.rs  lib.rs
gl/: Cargo.toml
renderer/src/: builder.rs  gpu_data.rs  scene.rs  tiles.rs
renderer/src/gpu/: renderer.rs  shaders.rs
resources/shaders/gl3/: tile_clip.fs.glsl  tile_clip.vs.glsl
resources/shaders/metal/: tile_clip.fs.metal  tile_clip.vs.metal
shaders/: Makefile  tile_clip.fs.glsl  tile_clip.vs.glsl
webgl/: Cargo.toml
