[package]
name = "pathfinder_webgl"
version = "0.1.0"
edition = "2018"
authors = ["Sebastian Köln <s3bk@protonmail.com>"]

[dependencies]
wasm-bindgen = "*"
log = "0.4.8"

[dependencies.image]
version = "0.23"
default-features = false
features = ["png"]

[dependencies.pathfinder_geometry]
version = "0.5"

[dependencies.pathfinder_gpu]
version = "0.5"

[dependencies.pathfinder_renderer]
version = "0.5"

[dependencies.pathfinder_simd]
version = "0.5"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  'WebGlProgram',
  'WebGlVertexArrayObject',
  'Window',
]

[dependencies.pathfinder_resources]
version = "0.5"

[dependencies.js-sys]
version = "0.3.37"
